cmake_minimum_required(VERSION 2.8)
project (immujson)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/)
add_subdirectory (src/immujson)
add_subdirectory (src/tests)
add_subdirectory (src/jsonpack)
add_subdirectory (src/jsonunpack)
add_subdirectory (src/validator)
  # The 'test' target runs all but the future tests
  cmake_policy(PUSH)
  if(POLICY CMP0037)
    cmake_policy(SET CMP0037 OLD)
  endif()
add_compile_options(-std=c++11)
add_custom_target( test bin/immujson_test DEPENDS bin/immujson_test)
cmake_policy(POP) 

